WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289033
Unreviewed, fix WeakGCMap::add for already cleared entry
https://bugs.webkit.org/show_bug.cgi?id=289033
Summary
Unreviewed, fix WeakGCMap::add for already cleared entry
Yusuke Suzuki
Reported
2025-03-03 19:39:49 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-03 19:40:16 PST
<
rdar://problem/146074403
>
Yusuke Suzuki
Comment 2
2025-03-03 19:41:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41830
EWS
Comment 3
2025-03-03 19:49:36 PST
Committed
291546@main
(535c00fb4c6c): <
https://commits.webkit.org/291546@main
> Reviewed commits have been landed. Closing PR #41830 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug