Unreviewed, fix WeakGCMap::add for already cleared entry https://bugs.webkit.org/show_bug.cgi?id=289033 rdar://146074403

Follow-up fix after 291535@main. WeakGCMap may have an entry which is
already cleared due to GC. Let's just use ensureValue since it is
simple.

* Source/JavaScriptCore/runtime/WeakGCMap.h:

Canonical link: https://commits.webkit.org/291546@main